# My_Game_Project

./: .gitignore  CMakeLists.txt  README.md
My_Game_Engine/: My_Game_Engine.sln
My_Game_Engine/Editor_Source/: CMakeLists.txt  Editor_Source.vcxproj  Editor_Source.vcxproj.filters
My_Game_Engine/My_Game_Engine/: DXMathUtils.h  GameEngine.cpp  GameEngine.h  My_Game_Engine.aps  My_Game_Engine.rc  My_Game_Engine.vcxproj  My_Game_Engine.vcxproj.filters  My_Game_Project.cpp  Renderer.cpp  Renderer.h  Resource.h  Scene_Manager.cpp  Scene_Manager.h  imgui.ini  pch.h  targetver.h  test_assimp_export.txt  test_model_tree.txt
My_Game_Engine/My_Game_Engine/Engine/: AvatarSystem.cpp  AvatarSystem.h  CMakeLists.txt  DXMathUtils.h  GameEngine.cpp  GameEngine.h  GameTimer.cpp  GameTimer.h  InputManager.cpp  InputManager.h  PhysicsSystem.cpp  PhysicsSystem.h  SceneArchive.cpp  SceneArchive.h  Scene_Manager.cpp  Scene_Manager.h
My_Game_Engine/My_Game_Engine/Engine/AvatarDefinition/: Humanoid_AvatarDefinition.json
My_Game_Engine/My_Game_Engine/Engine/Components/: AnimationControllerComponent.cpp  AnimationControllerComponent.h  CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  LightComponent.cpp  LightComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  SkinnedMeshRendererComponent.cpp  SkinnedMeshRendererComponent.h  TerrainComponent.cpp  TerrainComponent.h  TransformComponent.cpp  TransformComponent.h
My_Game_Engine/My_Game_Engine/Engine/Core/: Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Entity.cpp  Entity.h  Object.cpp  Object.h  ResourceRegistry.h  Scene.cpp  Scene.h
My_Game_Engine/My_Game_Engine/Engine/DX_Graphics/: DDSTextureLoader12.cpp  DDSTextureLoader12.h  DescriptorManager.cpp  DescriptorManager.h  DynamicBufferAllocator.cpp  DynamicBufferAllocator.h  Graphic_RootSignature.cpp  Graphic_RootSignature.h  Graphic_Shader.cpp  Graphic_Shader.h  Inspector_UI.cpp  Inspector_UI.h  PipelineDescFactory.cpp  PipelineDescFactory.h  RenderData.h  Renderer.cpp  Renderer.h  ResourceUtils.cpp  ResourceUtils.h  WICTextureLoader12.cpp
My_Game_Engine/My_Game_Engine/Engine/Managers/: ComponentFactory.cpp  ComponentFactory.h  ObjectManager.cpp  ObjectManager.h  PhysicsManager.cpp  PhysicsManager.h  RendererManager.cpp  RendererManager.h
My_Game_Engine/My_Game_Engine/Engine/Resource/: AnimationClip.cpp  AnimationClip.h  AnimationCommon.h  AnimationLayer.cpp  AnimationLayer.h  AvatarMask.cpp  AvatarMask.h  Game_Resource.cpp  Game_Resource.h  Material.cpp  Material.h  MaterialLoader.cpp  MaterialLoader.h  Mesh.cpp  Mesh.h  MetaIO.cpp  MetaIO.h  Model.cpp  Model.h  ModelLoader_Assimp.cpp  ModelLoader_Assimp.h  ModelLoader_FBX.cpp  ModelLoader_FBX.h  Model_Avatar.cpp  Model_Avatar.h  ResourceManager.cpp  ResourceManager.h  ResourceRegistry.cpp  ResourceRegistry.h  ResourceSystem.cpp  ResourceSystem.h  Skeleton.cpp  Skeleton.h  TerrainResource.cpp  TerrainResource.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
My_Game_Engine/My_Game_Engine/Engine/Terrain/: TerrainCommon.h  TerrainHeightField.cpp  TerrainHeightField.h  TerrainQuadTree.cpp  TerrainQuadTree.h
My_Game_Engine/My_Game_Engine/Shaders/: LightAssign_Shader.hlsl  Lights.hlsli  Shadow_Shader.hlsl  Skinning_Shader.hlsl  Terrain_Shader.hlsl
My_Game_Engine/My_Game_Engine/assets/CP_100_0002_63/: CP_100_0002_63.fbx
My_Game_Engine/My_Game_Engine/assets/CP_100_0012_02/: CP_100_0012_02.fbx
My_Game_Engine/My_Game_Engine/assets/CP_100_0012_03/: CP_100_0012_03.fbx
My_Game_Engine/My_Game_Engine/assets/CP_100_0012_04/: CP_100_0012_04.fbx
My_Game_Engine/My_Game_Engine/assets/CP_100_0012_05/: CP_100_0012_05.fbx
My_Game_Engine/My_Game_Engine/assets/CP_100_0012_06/: CP_100_0012_06.fbx
My_Game_Engine/My_Game_Engine/assets/CP_100_0012_07/: CP_100_0012_07.fbx
My_Game_Engine/My_Game_Engine/shaders/: Blit_Shader.hlsl  Composite_Shader.hlsl  Geometry_Shader.hlsl  PostFX_Util.hlsli  PostProcess_Shader.hlsl  Shader.hlsl
